# musren

./: .env  .gitignore  AGENTS.md  CLI.md  LICENSE  README.md  app.py  build.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
constants/: __init__.py  info.py
core/: __init__.py  artwork.py  audio_processor.py  cli.py  cli_typer.py  install_covers.py  shazam_processor.py
core/cli/: __init__.py  app.py  config.py  shell.py  theme.py
core/cli/commands/: albums.py  base.py  config.py  config_shell.py  covers.py  lyrics.py  recognize.py  rename.py
tests/: test_cli_empty_directory.py  test_recursive.py  test_rename.py
utils/: __init__.py  dependencies.py  tools.py
